altered Iframe and Index.html

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
 <div class="container">
     <div class="row">
-
-        <div class="col-xs-6 col-md-6 col-lg-6" style="background-color:green;">
+        <div class="col-md-6" style="background-color:green;">
             <div class="contributors">
                     <h4>Contributors</h4>
                         <ul>
@@ -98,13 +97,12 @@
 
                             </li>
                         </ul>
+                        </div>
             </div>
-
         </div>
-
-    <div class="col-xs-6 col-md-6 col-lg-4" style="background-color:yellow;">
-            <div class="stories">
-
+    <div class="col-xs-6" style="background-color:yellow;">
+        <div class="stories">
+              <div class="row">
                     <h4>Popular Stories</h4>
                         <ul>
                             <li class="service-list">
@@ -141,13 +139,13 @@
 
                             </li>
                         </ul>
-            </div>
 
+              </div>
         </div>
     </div>
-          <div class="row">
-    <div class="col-xs-6 col-md-6 col-lg-6" style="background-color:pink;">
-            <div class="tweets">
+        <div class="row">
+          <div class="col-xs-6 col-md-6 " style="background-color:pink;">
+              <div class="tweets">
                     <h4>The Tweets</h4>
                          <ul>
                             <li class="service-list">
@@ -205,8 +203,8 @@
 
                             </li>
                         </ul>
-            </div>
-
+              </div>
+          </div>
         </div>
 
 
@@ -222,9 +220,9 @@
                 </div> -->
             </div>
         </div>
-</div>
 
-        </div>
+
+
     <div class="col-xs-12 col-md-6 col-lg-9" style="background-color:blue;">
             <div class="quizzies">
                     <h4>Quizzies</h4>
@@ -245,7 +243,7 @@
 
             </div>
         </div>
-    </div>
+</div>
 
 </body>
 
