--- a/videos.html
+++ b/videos.html
@@ -68,10 +68,11 @@
     <h3>Videos</h3>
     </div>
         <div class="row">
-              <div class="col-xs-6 col-lg-6 " style="background-color:green;">
-                <div class="mainVideo">
+              <div class="col-md-6 col-lg-6 " style="background-color:green;">
+
+                  <div class = "video-container">
                              <div class="iframe">
-                               <iframe width="545" height="313" src="./images/unicorn-large-crop.jpg">
+                               <iframe  width="545" height="313" src="./images/unicorn-large-crop.jpg">
                             </iframe>
                             </div>
                             <h3>Unicorn at work</h3>
@@ -88,6 +89,7 @@
                             </div>
                             <h3>Unicorn at work</h3>
                   </div>
+
               </div>
 
               <div class="col-md-offset-6 " style="background-color:yellow;">
@@ -101,9 +103,9 @@
                                   <button type="button" class="btn btn-default">Sign Me Up</button>
                                 </form>
                               </div>
+                              </div>
                             </div>
-                          </div>
-                          </div>
+              </div>
       </div>
 </div>
 
