changes index html

--- a/index.html
+++ b/index.html
@@ -58,51 +58,8 @@
 <body>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-6" style="background-color:green;">
-            <div class="contributors">
-                    <h4>Contributors</h4>
-                        <ul>
-                            <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
-                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
-
-                            </li>
-                        </ul>
-                         <ul>
-                            <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
-                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
-
-                            </li>
-                        </ul>
-                        <ul>
-                            <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
-                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
-
-                            </li>
-                        </ul>
-                         <ul>
-                            <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
-                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
-
-                            </li>
-                        </ul>
-                        <ul>
-                            <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
-                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
-
-                            </li>
-                        </ul>
-                        </div>
-            </div>
-        </div>
-    <div class="col-xs-6" style="background-color:yellow;">
+    <div class="col-xs-6 col-md-6" style="background-color:yellow;">
         <div class="stories">
-              <div class="row">
                     <h4>Popular Stories</h4>
                         <ul>
                             <li class="service-list">
@@ -140,11 +97,55 @@
                             </li>
                         </ul>
 
-              </div>
-        </div>
+
     </div>
+        </div>
         <div class="row">
-          <div class="col-xs-6 col-md-6 " style="background-color:pink;">
+            <div class="col-xs-6 col-md-12" style="background-color:green;">
+          <div class="pull-right">
+                <div class="contributors">
+                    <h4>Contributors</h4>
+                        <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                </div>
+            </div>
+           </div>
+        </div>
+      <div class="row">
+          <div class="col-md-6 col-lg-12" style="background-color:purple;">
               <div class="tweets">
                     <h4>The Tweets</h4>
                          <ul>
@@ -203,27 +204,19 @@
                             </li>
                         </ul>
               </div>
-          </div>
+              <div class="col-md-6 col-lg-12">
+      <div class="pull-right">
+            <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
         </div>
 
+       <!--  <div class="col-md-6 col-lg-12" style="background-color:purple;"> -->
 
-        <div class="col-xs-7 col-md-12 col-lg-6" style="background-color:purple;">
-            <div class="adimage"><img src="./images/Ad-femme.jpg">
-                              <!-- <hr>
-                <div class="email">
-                    <h4>Get News</h4>
-                  <form action="action_page.php">
-                      <input type="email" placeholder="your email address" name="email">
-                    <button type="button" class="btn btn-default">Sign Me Up</button>
-                  </form>
-                </div> -->
-            </div>
-        </div>
-
-
-
-    <div class="col-xs-12 col-md-6 col-lg-9" style="background-color:blue;">
+      </div>
+      </div>
+              </div>
+    <div class="col-xs-6 col-md-10" style="background-color:blue;">
             <div class="quizzies">
+              <div class="pull-right">
                     <h4>Quizzies</h4>
                         <ul>
                             <li class="service-list">
@@ -239,9 +232,9 @@
 
                             </li>
                         </ul>
-
+              </div>
             </div>
-        </div>
+    </div>
 </div>
 
 </body>
