changes index html

--- a/index.html
+++ b/index.html
@@ -96,8 +96,6 @@
 
                             </li>
                         </ul>
-
-
     </div>
         </div>
         <div class="row">
@@ -145,7 +143,7 @@
            </div>
         </div>
       <div class="row">
-          <div class="col-md-6 col-lg-12" style="background-color:purple;">
+          <div class="span6" style="background-color:purple;">
               <div class="tweets">
                     <h4>The Tweets</h4>
                          <ul>
@@ -204,16 +202,16 @@
                             </li>
                         </ul>
               </div>
-              <div class="col-md-6 col-lg-12">
-      <div class="pull-right">
+          </div>
+      </div>
+        <div class="pull-right">
+              <div class="span6">
             <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
-        </div>
+              </div>
 
        <!--  <div class="col-md-6 col-lg-12" style="background-color:purple;"> -->
 
-      </div>
-      </div>
-              </div>
+        </div>
     <div class="col-xs-6 col-md-10" style="background-color:blue;">
             <div class="quizzies">
               <div class="pull-right">
