fixed responsive ad

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <body>
 
 <div class="container">
-    <div class="col-xs-6 col-md-6" style="background-color:yellow;">
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:yellow;">
         <div class="stories">
                     <h4>Popular Stories</h4>
                         <ul>
@@ -98,9 +99,7 @@
                         </ul>
     </div>
         </div>
-        <div class="row">
-            <div class="col-xs-6 col-md-12" style="background-color:green;">
-          <div class="pull-right">
+            <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:green;">
                 <div class="contributors">
                     <h4>Contributors</h4>
                         <ul>
@@ -140,11 +139,11 @@
                         </ul>
                 </div>
             </div>
-           </div>
-        </div>
-      <div class="row">
-          <div class="span6" style="background-color:purple;">
-              <div class="tweets">
+
+
+          <!-- <div class="clearfix visible-lg"></div> -->
+          <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:green;">
+              <div class="tweets" >
                     <h4>The Tweets</h4>
                          <ul>
                             <li class="service-list">
@@ -203,18 +202,18 @@
                     </ul>
               </div>
           </div>
-      </div>
-        <div class="pull-right">
-              <div class="span6">
-            <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
-              </div>
 
-       <!--  <div class="col-md-6 col-lg-12" style="background-color:purple;"> -->
+      <div class="pull-right">
+            <div class="clearfix">
+             <div class="col-lg-10 col-md-6 col-xs-8" style="background-color:purple;">
+                  <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
+
 
         </div>
-    <div class="col-xs-6 col-md-10" style="background-color:blue;">
+      </div>
+    <div class="col-lg-7 col-md-6 col-xs-8" style="background-color:blue;">
             <div class="quizzies">
-              <div class="pull-right">
+
                     <h4>Quizzies</h4>
                         <ul>
                             <li class="service-list">
@@ -231,8 +230,9 @@
                             </li>
                         </ul>
               </div>
-            </div>
+
     </div>
+  </div>
 </div>
 
 </body>
