fixed responsive ad2

--- a/index.html
+++ b/index.html
@@ -204,17 +204,12 @@
           </div>
 
       <div class="pull-right">
-            <div class="clearfix">
-             <div class="col-lg-10 col-md-6 col-xs-8" style="background-color:purple;">
+            <!-- <div class="clearfix"> -->
+             <div class="col-lg-8 col-md-6 col-xs-8" style="background-color:purple;">
                   <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
 
-
-        </div>
-      </div>
-    <div class="col-lg-7 col-md-6 col-xs-8" style="background-color:blue;">
             <div class="quizzies">
-
-                    <h4>Quizzies</h4>
+               <h4>Quizzies</h4>
                         <ul>
                             <li class="service-list">
                                 <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
@@ -230,6 +225,9 @@
                             </li>
                         </ul>
               </div>
+            </div>
+      </div>
+
 
     </div>
   </div>
