--- a/quizzes.html
+++ b/quizzes.html
@@ -14,6 +14,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <link href="<?php bloginfo('template_directory');?>style.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <div class="blog-header">
   <h1 class="blog-title"><a href="<?php bloginfo('wpurl');?>"><?php echo get_bloginfo( 'name' ); ?></a></h1>
@@ -25,11 +26,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   <?php wp_head();?>
-  <div id="main">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-  </div>
 
-    <div class="container">
+    <div class="container" >
           <nav class="navbar navbar-default">
             <div class="navbar-header">
               <img src="./images/shareworthy-Theme-logo.jpg" alt="">
@@ -51,7 +49,7 @@
              <a href="#"><img src="./images/Pinterest_Color.png" alt="icon" height="42" width="42"></a>
 
         </div>
-        </div>
+    </div>
 
 <!--nav sidebar-->
 
@@ -59,77 +57,190 @@
 
 <body>
 
-<div class="container-fluid";>
-    <div class="row">
-        <div class=" col-xs-4 col-lg-8" style="background-color:yellow;">
-            <div class="contributors">
+<div class="container">
+  <div class="row">
+          <div class="iframe">
+             <iframe width="545" height="313" src="./images/unicorn-large-crop.jpg">
+          </iframe>
+          </div>
+          <h3>Unicorn at work</h3>
+    <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:yellow;">
+        <div class="stories">
+                    <h4>Popular Stories</h4>
+                        <ul>
+                            <li class="service-list">
+                                <img src="./images/Video-Thumb-1.jpg" alt="icon" height="32" width="42"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/Video-Thumb-1.jpg" alt="icon" height="32" width="42"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="service-list">
+                                <img src="./images/Video-Thumb-1.jpg" alt="icon" height="32" width="42"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/Video-Thumb-1.jpg" alt="icon" height="32" width="42"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                        <ul>
+                            <li class="service-list">
+                                <img src="./images/Video-Thumb-1.jpg" alt="icon" height="32" width="42"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+    </div>
+        </div>
+            <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:green;">
+                <div class="contributors">
                     <h4>Contributors</h4>
                         <ul>
                             <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="42"></a>
-                                <p>The Best Labor Day Deals</p><a href="url">More</a>
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
 
                             </li>
                         </ul>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
 
-        <div class=".col-xs-4" style="background-color:green;">
-            <div class="tweets">
-                    <h4>The Tweets</h4>
+                            </li>
+                        </ul>
                         <ul>
                             <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="42"></a>
-                                <p>The Best Labor Day Deals</p><a href="url">More</a>
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
                             </li>
                         </ul>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
 
-            </div>
-        </div>
-         <div class=".col-xs-4" style="background-color:green;">
-            <div class="tweets">
-                    <h4>The Tweets</h4>
+                            </li>
+                        </ul>
                         <ul>
                             <li class="service-list">
-                                <img src="./images/unicorn.png" alt="icon" height="32" width="42"></a>
-                                <p>The Best Labor Day Deals</p><a href="url">More</a>
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
                             </li>
                         </ul>
-
-            </div>
-        </div>
-    </div>
-        </div>
-                <div class="row">
-                    <div class=".col-xs-12" style="background-color:blue;">
-                            <div class="adimagevideo"><img src="./images/juicy.png">
-                              <hr>
-                              <div class="email">
-                                  <h4>Get News</h4>
-                                <form action="action_page.php">
-                                    <input type="email" placeholder="your email address" name="email">
-                                  <button type="button" class="btn btn-default">Sign Me Up</button>
-                                </form>
-                              </div>
-                            </div>
-                        </div>
                 </div>
+            </div>
 
-            <!-- </div>
- --><!-- </div> -->
+
+          <!-- <div class="clearfix visible-lg"></div> -->
+          <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:green;">
+              <div class="tweets" >
+                    <h4>The Tweets</h4>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+                            </li>
+                        </ul>
+                    <ul>
+                        <li class="service-list">
+                            <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                            <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="service-list">
+                            <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                            <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                        </li>
+                    </ul>
+                     <ul>
+                        <li class="service-list">
+                            <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                            <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="service-list">
+                            <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                            <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                        </li>
+                    </ul>
+                     <ul>
+                        <li class="service-list">
+                            <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                            <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="service-list">
+                            <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                            <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                        </li>
+                    </ul>
+              </div>
+          </div>
+
+      <div class="pull-right">
+            <!-- <div class="clearfix"> -->
+             <div class="col-lg-8 col-md-6 col-xs-8" style="background-color:purple;">
+                  <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
+
+            <div class="quizzies">
+               <h4>Quizzies</h4>
+                        <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+                         <ul>
+                            <li class="service-list">
+                                <img src="./images/unicorn.png" alt="icon" height="32" width="32"></a>
+                                <p>The Best Labor Day Deals</p><a href="url"> More</a>
+
+                            </li>
+                        </ul>
+              </div>
+            </div>
+      </div>
+
+
+    </div>
+  </div>
+</div>
+
 </body>
 
-<script>
-function openNav() {
-    document.getElementById("mySidenav").style.width = "250px";
-    document.getElementById("main").style.marginLeft = "250px";
-    document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
-}
 
-function closeNav() {
-    document.getElementById("mySidenav").style.width = "0";
-    document.getElementById("main").style.marginLeft= "0";
-    document.body.style.backgroundColor = "white";
-}
-</script>
 
 
 
