--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="index.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <link href="<?php bloginfo('template_directory');?>style.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <div class="blog-header">
@@ -27,15 +27,17 @@
     <![endif]-->
   <?php wp_head();?>
 
-    <div class="container" >
-          <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="nav_body">
+
+          <nav class="navbar navbar-default " style="background-color: white">
             <div class="navbar-header">
-              <img src="./images/shareworthy-Theme-logo.jpg" alt="">
+              <img src="./images/shareworthy-Theme-Logo.jpg" >
             </div>
               <ul class="nav navbar-nav">
-              <li class="active"><a data-toggle="tab" href="Home">Home</a></li>
               <li><a data-toggle="tab" href="Quizzies">Quizzies</a></li>
               <li><a data-toggle="tab" href="Videos">Videos</a></li>
+              <li><a data-toggle="tab" href="Home">Stories</a></li>
               <li><a data-toggle="tab" href="Polls">Polls</a></li>
             </ul>
         </nav>
@@ -49,6 +51,7 @@
              <a href="#"><img src="./images/Pinterest_Color.png" alt="icon" height="42" width="42"></a>
 
         </div>
+      </div>
     </div>
 
 <!--nav sidebar-->
@@ -59,7 +62,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:yellow;">
+    <div class="col-lg-6 col-md-6 col-xs-6" style="background-color:yellow;">
         <div class="stories">
                     <h4>Popular Stories</h4>
                         <ul>
@@ -99,7 +102,7 @@
                         </ul>
     </div>
         </div>
-            <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:green;">
+            <div class="col-lg-6 col-md-6 col-xs-7" style="background-color:green;">
                 <div class="contributors">
                     <h4>Contributors</h4>
                         <ul>
@@ -139,10 +142,9 @@
                         </ul>
                 </div>
             </div>
-
-
-          <!-- <div class="clearfix visible-lg"></div> -->
-          <div class="col-lg-6 col-md-6 col-xs-8" style="background-color:green;">
+  </div>
+<div class="row">
+         <div class="col-lg-7 col-md-6 col-xs-0" style="background-color:green;">
               <div class="tweets" >
                     <h4>The Tweets</h4>
                          <ul>
@@ -203,9 +205,8 @@
               </div>
           </div>
 
-      <div class="pull-right">
-            <!-- <div class="clearfix"> -->
-             <div class="col-lg-8 col-md-6 col-xs-8" style="background-color:purple;">
+
+          <div class="col-lg-5 col-md-6 col-xs-12">
                   <div class="adimage"><img src="./images/Ad-femme.jpg"></div>
 
             <div class="quizzies">
@@ -225,8 +226,8 @@
                             </li>
                         </ul>
               </div>
-            </div>
-      </div>
+          </div>
+
 
 
     </div>
