altered all of the nav bars

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
   <script src="index.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  <link href="<?php bloginfo('template_directory');?>style.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
+  <link href="<?php bloginfo('template_directory');?>home.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/home.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <div class="blog-header">
@@ -26,10 +27,6 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   <?php wp_head();?>
-
-    <div class="container">
-      <div class="nav_body">
-
           <nav class="navbar navbar-default " style="background-color: white">
             <div class="navbar-header">
               <img src="./images/shareworthy-Theme-Logo.jpg" >
@@ -41,23 +38,23 @@
               <li><a data-toggle="tab" href="Polls">Polls</a></li>
             </ul>
         </nav>
-        <div class="social" height="22" width="52">
-             <a href="#"><img src="./images/Facebook_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Instagram_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Linkedin_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Twitter_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Vimeo_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Behance_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Pinterest_Color.png" alt="icon" height="42" width="42"></a>
 
-        </div>
-      </div>
-    </div>
-
-<!--nav sidebar-->
+<div class="container-fluid">
+        <div class="col-lg-6 col-md-6 col-xs-12" >
+              <div class="social">
+                 <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/deviantart-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Twitter-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/github-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/behance-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Pinterest-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/snapchat-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/youtube-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/tumblr-crop.jpg" alt="icon" height="32" width="32"></a>
+              </div>
 
 </head>
-
 <body>
 
 <div class="container">
