--- a/home.html
+++ b/home.html
@@ -105,7 +105,8 @@
                                       <a href="url"><div class="twitter_ID">@Micheal
                                       </div>
                                       <img src="./images/Bio-Photo.jpg" alt="icon" height="32" width="32">
-                                      <p>The Best Labor Day Deals</p><input type="time" name="timestamp" >
+                                      <p>The Best Labor Day Deals</p><?php echo "$time_offset" ?>
+
                                   </li>
                                 </ul>
                                 <ul>
@@ -128,10 +129,15 @@
       <!-- <div class="row">
  -->        <div class="col-lg-pull-6 col-md-6 col-xs-12" >
             <h2>Videos</h2>
+                        <div class="video-container">
+                            <div class="playbtn"><img src="./images/playbtn.png"></div>
+                              <div class="UnicornLarge">
+                                <img src="./images/unicorn-large-crop.jpg">
+                               <iframe  frameborder="0">
+                                </iframe>
+                              </div>
+                        </div>
 
-                        <div class="video-container"><img src="./images/unicorn-large-crop.jpg">
-                               <iframe width="545" height="313"  src="./images/playbtn.png" frameborder="0" allowfullscreen>
-                                </iframe></div>
                     <div class="videos">
 
                           <ul>
