--- a/videos.html
+++ b/videos.html
@@ -9,16 +9,14 @@
   <meta name="author" content="">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script language="javascript" type="text/javascript">
-    function resizeIframe(obj) {
-      obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-    }
-  </script>
+
   <script src="index.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  <link href="<?php bloginfo('template_directory');?>style.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/video.css">
+  <link href="<?php bloginfo('template_directory');?>home.css" rel="stylesheet">
+
+  <link rel="stylesheet" href="./css/home.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
   <div class="blog-header">
   <h1 class="blog-title"><a href="<?php bloginfo('wpurl');?>"><?php echo get_bloginfo( 'name' ); ?></a></h1>
   <p class="lead blog-description"><?php echo get_bloginfo( 'description' ); ?></p>
@@ -30,11 +28,11 @@
     <![endif]-->
   <?php wp_head();?>
 
-    <div class="container">
+
           <nav class="navbar navbar-default " style="background-color: white">
-              <div class="navbar-header">
-                <img src="./images/shareworthy-Theme-Logo.jpg" >
-              </div>
+            <div class="navbar-header">
+              <img src="./images/shareworthy-Theme-Logo.jpg" >
+            </div>
               <ul class="nav navbar-nav">
               <li><a data-toggle="tab" href="Quizzies">Quizzies</a></li>
               <li><a data-toggle="tab" href="Videos">Videos</a></li>
@@ -42,23 +40,24 @@
               <li><a data-toggle="tab" href="Polls">Polls</a></li>
             </ul>
         </nav>
-        <div class="social" height="22" width="52">
-             <a href="#"><img src="./images/Facebook_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Instagram_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Linkedin_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Twitter_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Vimeo_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Behance_Color.png" alt="icon" height="42" width="42"></a>
-             <a href="#"><img src="./images/Pinterest_Color.png" alt="icon" height="42" width="42"></a>
 
-        </div>
-    </div>
-
-<!--nav sidebar-->
-
-
+<div class="container-fluid">
+        <div class="col-lg-6 col-md-6 col-xs-12" >
+              <div class="social">
+                 <a href="#"><img src="./images/Facebook-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Instagram-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/deviantart-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Twitter-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/github-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/behance-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/Pinterest-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/snapchat-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/youtube-crop.jpg" alt="icon" height="32" width="32"></a>
+                 <a href="#"><img src="./images/tumblr-crop.jpg" alt="icon" height="32" width="32"></a>
+              </div>
 
 </head>
+
 
 <body>
 
@@ -68,26 +67,14 @@
     </div>
         <div class="row">
               <div class="col-md-6 col-lg-6 " >
-
                   <div class = "video-container">
-                             <div class="iframe">
-                               <iframe  width="545" height="313" src="./images/unicorn-large-crop.jpg">
-                            </iframe>
-                            </div>
-                            <h3>Unicorn at work</h3>
-
-                            <div class="iframe">
-                               <iframe width="545" height="313" src="./images/unicorn-large-crop.jpg">
-                            </iframe>
-                            </div>
-                            <h3>Unicorn at work</h3>
-
-                            <div class="iframe">
-                               <iframe width="545" height="313" src="./images/unicorn-large-crop.jpg">
-                            </iframe>
-                            </div>
-                            <h3>Unicorn at work</h3>
-                  </div>
+                    <div class="playbtn"><img src="./images/playbtn.png"></div>
+                              <div class="UnicornLarge">
+                                <img src="./images/unicorn-large-crop.jpg">
+                               <iframe  frameborder="0" webkitallowfullscreen>
+                                </iframe>
+                              </div>
+                    </div>
 
               </div>
 
